feat: add refresh route and strategy
