# src/modules/auth/auth.controller.ts
@@ -1,7 +1,9 @@
-import { Body, Controller, HttpCode, Post } from '@nestjs/common';
+import { Body, Controller, HttpCode, Post, UseGuards } from '@nestjs/common';
+import { AuthGuard } from '@nestjs/passport';
 import { IUser } from '../user/user.interface';
 import { AuthService } from './auth.service';
 import { AuthCredentialsDto } from './dto/auth-credentials.dto';
+import { JWTResponce } from './jwt.interface';
 
 @Controller('auth')
 export class AuthController {
@@ -17,7 +19,27 @@ export class AuthController {
   @HttpCode(200)
   async signIn(
     @Body() authCredentialsDto: AuthCredentialsDto,
-  ): Promise<{ accessToken: string }> {
+  ): Promise<JWTResponce> {
     return this.authService.login(authCredentialsDto);
+  }
+
+  @HttpCode(200)
+  @UseGuards(AuthGuard('jwt-refresh-token'))
+  @Post('refresh')
+  async refreshToken(@Body() { refreshToken }: JWTResponce) {
+    const user = await this.authService.getUserIfRefreshTokenMatches(
+      refreshToken,
+    );
+
+    if (user) {
+      const userInfo = {
+        login: user.login,
+        userId: user.id,
+      };
+
+      return this.authService.issueTokenPair(userInfo);
+    } else {
+      return null;
+    }
   }
 }
